tests/typeck/valid/generics.vit
space tests/typeck/valid/generics

proc identity<T>(value: T) -> T {
  give value;
}

proc main() -> int {
  give identity<int>(1);
}
