tests/typeck/invalid/call_arity.vit
space tests/typeck/invalid/call_arity

proc take(value: int) -> int {
  give value;
}

proc main() -> int {
  give take();
}
